2008-07-11  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* pandora_console/operation/agentes/estado_grupo.php: Fixed the issue where all data was 0-ed out. There was an if-then-else construction that wasn't working well

	* pandora_console/operation/agentes/networkmap.php: Made more extensive error messages that explains WHY it wasn't generating. Then also made it so the image is cached instead of regenerated every time (currently hardcoded at 5 min.).

2008-07-10  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* pandora_console/operation/agentes/estado_grupo.php: Fixed some extra spaces that made the URL look ugly

        * pandora_console/operation/agentes/status_monitor.php: Made a nested SQL query out of the flagging operation, much faster now.
		There is still a bug here that I was trying to fix. Everything is 0-ed on this page. I will find out why tomorrow        

        * pandora_console/images/console/background: Added some backgrounds

2008-07-10  Sancho Lerena <slerena@gmail.com>

	* include/styles/pandora_red.css: Updated.

	* include/styles/pandora_black.css: New style with BLACK blackground.

	* include/styles/pandora.css: Updated.

	* include/functions_db.php: Added auto order combos and queries.
	
	* include/functions_visual_map.php: Added overlap on down elements if
	there are more than one in the same position (This could allow to cluster
	elements to shown the down status first). Removed unused code.

	* operation/events/events.php: Added tooltip for group name.

	* operation/visual_console/render_view.php: Adjusted controls position.

	* operation/agentes/status_monitor.php: Added status for unknown monitors.
	Added some database search improvement.

	* operation/agentes/sla_view.php: Sorted list of items.

	* operation/agentes/ver_agente.php: Updated AJAX code for network map
	detail view of an agent. Added alert data.

	* operation/agentes/tactical.php: Removed 'fixed' styles, now using CSS.
